Add Tasklist.h to the header file so EclipseTASKS can see it.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,6 @@
 cmake_minimum_required (VERSION 3.6.1)
 project (projectTemplateProjectName)
-add_executable(mainExecutable src/main.cpp)
+add_executable(mainExecutable
+	src/main.cpp
+	Tasklist.h
+)
